--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <h1>Pacific Programming Interfaces Confab (PPIC)</h1>
 
-<p>PPIC in an informal meetup to muse on programming interfaces and, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
-The format varies week to week: one week might discuss a paper or talk, the next someone might present work in progress for feedback, and the next we might some spicy question like, "Do end-users even want to automate their tasks?".
+<p>PPIC in an informal meetup to muse on programming interfaces and on, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
+The format varies week to week: one week might discuss a paper or talk, the next someone might present work in progress for feedback, and the next we might argue about some spicy question like, "Do end-users even want to automate their tasks?".
 Visitors welcome, even if you're not in the Pacific time zone!</p>
     
 <p>To receive announcements and obtain the Zoom link, join the <a href="https://groups.google.com/a/ucsd.edu/g/programming-interfaces-g">programming-interfaces-g@ucsd.edu Google group</a>.</p>
