--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <h1>Pacific Programming Interfaces Confab (PPIC)</h1>
 
-<p>PPIC in an informal meetup to muse on programming interfaces and on, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
+<p>PPIC is an informal meetup to muse on programming interfaces and on, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
 The format varies week to week: one week we might discuss a paper or talk, the next someone might present work in progress for feedback, and the next we might argue about some spicy question like, "Do end-users even want to automate their tasks?".
 Visitors welcome, even if you're not in the Pacific time zone!</p>
     
