--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Feb 28</td>
+    <td>Collapsing Output & Code into a Single Media.
+        <a href="https://www.youtube.com/watch?v=AziAhVuiU3Q">ħirba' - early prototype (Samosa 2025)</a>
+        <a href="https://youtu.be/a_o-ZzgpiK8?si=Z2zKrku3t1C_pJe7&t=2157">Final-ish Eve Prototype (Granger 2017)</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
     <td>Feb 14</td>
     <td>Loops💘Tables II</td>
     <td>Brian</td>
@@ -37,6 +45,33 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 <tr>
     <td>Jan 31</td>
     <td>Loops💘Tables I</td>
+    <td>Brian</td>
+</tr>
+<tr>
+    <td>Dec 6</td>
+    <td>
+        PbD Part 2: Unambiguous Intent.
+        <a href="http://acypher.com/wwid/Chapters/01Pygmalion.html">Pygmalion (Smith 1975)</a>
+        <a href="https://vimeo.com/66085662">Drawing Dynamic Visualizations (Victor 2013)</a>
+        <a href="https://vimeo.com/19185801">Wrangler (Kandel 2001)</a>
+        <a href="https://www.youtube.com/watch?v=4GOeYylCMJI&t=9116s">Subsequently (Goethals 2024)</a>
+    </td>
+    <td>Josh</td>
+</tr>
+<tr>
+    <td>Nov 22</td>
+    <td>
+        Programming by Demonstration (PBD).
+        <a href="https://ojs.aaai.org/aimagazine/index.php/aimagazine/article/view/2262/2115">Why PBD Systems Fail (Lau 2009)</a>
+        <a href="http://acypher.com/Eager/">Eager (Cypher 1991)</a>
+        <a href="https://www.youtube.com/watch?v=qXA44l59w2g">Excel macros</a>
+        <a href="https://www.anthropic.com/news/3-5-models-and-computer-use">Claude's computer use</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
+    <td>Nov 15</td>
+    <td>First Meeting: <a href="images/Pacific Programming Interfaces Confab (PPIC) Open Questions.svg">What are the open questions in our field?</a></td>
     <td>Brian</td>
 </tr>
 
