--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </thead>
 
 <tbody>
-<tr>
+    <tr>
+        <td>Mar 7</td>
+        <td>Transforming between equivalent program specifications</td>
+        <td>Elliot</td>
+    </tr>
+    <tr>
     <td>Feb 28</td>
     <td>Collapsing Output & Code into a Single Media.
         <a href="https://www.youtube.com/watch?v=AziAhVuiU3Q">ħirba' - early prototype (Samosa 2025)</a>
