--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>Feb 28</td>
     <td>Collapsing Output & Code into a Single Media.
         <a href="https://www.youtube.com/watch?v=AziAhVuiU3Q">ħirba' - early prototype (Samosa 2025)</a>
-        <a href="https://youtu.be/a_o-ZzgpiK8?si=Z2zKrku3t1C_pJe7&t=2157">Final-ish Eve Prototype (Granger 2017)</a>
+        <a href="https://www.youtube.com/watch?v=MJlBGZ-kpg0">Boxer demo</a>
+        <a href="http://www.smalltalk.org.br/movies/self.html">Self: The Movie; (1995))</a>
+        <a href="https://web.engr.oregonstate.edu/~burnett/Forms3/forms3.html">Forms/3</a>
     </td>
     <td>Brian</td>
 </tr>
