--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>Collapsing Output & Code into a Single Media.
         <a href="https://www.youtube.com/watch?v=AziAhVuiU3Q">ħirba' - early prototype (Samosa 2025)</a>
         <a href="https://www.youtube.com/watch?v=MJlBGZ-kpg0">Boxer demo</a>
-        <a href="http://www.smalltalk.org.br/movies/self.html">Self: The Movie; (1995))</a>
+        <a href="http://www.smalltalk.org.br/movies/self.html">Self: The Movie; (1995)</a>
         <a href="https://web.engr.oregonstate.edu/~burnett/Forms3/forms3.html">Forms/3</a>
     </td>
     <td>Brian</td>
