table link styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <head>
     <title>Pacific Programming Interfaces Confab (PPIC)</title>
     <style>
-
+        td a:not(.normal) {
+            text-decoration: none;
+            background: darkgray;
+            border-radius: 5px;
+            font-size: smaller;
+            color: white;
+            padding: 1px 3px;
+        }
+        td a:not(.normal):hover {
+            background: black;
+        }
     </style>
 </head>
 <h1>Pacific Programming Interfaces Confab (PPIC)</h1>
@@ -78,7 +88,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </tr>
 <tr>
     <td>Nov 15</td>
-    <td>First Meeting: <a href="images/Pacific Programming Interfaces Confab (PPIC) Open Questions.svg">What are the open questions in our field?</a></td>
+    <td>First Meeting: <a href="images/Pacific Programming Interfaces Confab (PPIC) Open Questions.svg" class="normal">What are the open questions in our field?</a></td>
     <td>Brian</td>
 </tr>
 
