--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-    <title>Pacific Programming Interfaces Confab (PPIC)</title>
     <style>
         td a:not(.normal) {
             text-decoration: none;
@@ -15,7 +14,7 @@
         }
     </style>
 </head>
-<h1>Pacific Programming Interfaces Confab (PPIC)</h1>
+<h1>🌊 Pacific Programming Interfaces Confab (PPIC) 🌊</h1>
 
 <p>PPIC is an informal meetup to muse on programming interfaces and on, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
 The format varies week to week: one week we might discuss a paper or talk, the next someone might present work in progress for feedback, and the next we might argue about some spicy question like, "Do end-users even want to automate their tasks?".
