--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <title>🌊 Pacific Programming Interfaces Confab (PPIC) 🌊</title>
     <style>
         td a:not(.normal) {
             text-decoration: none;
