Add Mar 7 notes svg

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 <tbody>
     <tr>
         <td>Mar 7</td>
-        <td>Transforming between equivalent program specifications</td>
+        <td>Transforming between equivalent program specifications <a href="images/ppic_rewrites.svg" class="normal">virtual whiteboard notes</a></td>
         <td>Elliot</td>
     </tr>
     <tr>
