--- a/index.html
+++ b/index.html
@@ -39,12 +39,29 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </thead>
 
 <tbody>
-    <tr>
-        <td>Mar 7</td>
-        <td>Transforming between equivalent program specifications <a href="images/ppic_rewrites.svg" class="normal">virtual whiteboard notes</a></td>
-        <td>Elliot</td>
-    </tr>
-    <tr>
+<tr>
+    <td>Mar 14</td>
+    <td>Bespoke Visualization GUIs
+        <a href="https://dl.acm.org/doi/10.1145/191666.191715">Gold</a>
+        <a href="https://dl.acm.org/doi/10.1145/191666.191719">SageBrush</a>
+        <a href="https://vimeo.com/66085662">Drawing Dynamic Visualizations</a>
+        <a href="https://idl.cs.washington.edu/projects/lyra/">Lyra</a>
+        <a href="https://donghaoren.org/ivisdesigner/">iVisDesigner</a>
+        <a href="https://donghaoren.org/charticulator/">Charticulator</a>
+        <a href="https://www.zcliu.org/di/">Data Illustrator</a>
+        <a href="https://dl.acm.org/doi/10.1145/2858036.2858435">iVolver</a>
+        <a href="https://link.springer.com/chapter/10.1007/978-3-030-24781-2_8">Cuscus</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
+    <td>Mar 7</td>
+    <td>Transforming between equivalent program specifications
+        <a href="images/ppic_rewrites.svg" class="normal">(virtual whiteboard notes)</a>
+    </td>
+    <td>Elliot</td>
+</tr>
+<tr>
     <td>Feb 28</td>
     <td>Collapsing Output & Code into a Single Media.
         <a href="https://www.youtube.com/watch?v=AziAhVuiU3Q">ħirba' - early prototype (Samosa 2025)</a>
