--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
         <a href="https://vimeo.com/66085662">Drawing Dynamic Visualizations</a>
         <a href="https://idl.cs.washington.edu/projects/lyra/">Lyra</a>
         <a href="https://donghaoren.org/ivisdesigner/">iVisDesigner</a>
+        <a href="https://ddg.namwkim.org/">Data-Driven Guides</a>
         <a href="https://donghaoren.org/charticulator/">Charticulator</a>
         <a href="https://www.zcliu.org/di/">Data Illustrator</a>
         <a href="https://dl.acm.org/doi/10.1145/2858036.2858435">iVolver</a>
