--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Mar 21</td>
+    <td>Programming by Demonstration (PBD) for Intro Programming.
+        <a href="https://www.youtube.com/watch?v=DPsdy2u9nHk">Algot (Thorgeirsson 2024)</a>
+        <a href="https://www.youtube.com/watch?v=tV883xHGXM0&list=PLL3zrb-nB_Ah6n262DcJadPtG76CjLh23&index=11">AlgoTouch (Frison 2015)</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
     <td>Mar 14</td>
     <td>Bespoke Visualization GUIs
         <a href="https://dl.acm.org/doi/10.1145/191666.191715">Gold</a>
