--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 <tr>
     <td>Mar 21</td>
     <td>Programming by Demonstration (PBD) for Intro Programming.
+        <a href="https://www.youtube.com/watch?v=jZFLuDkg4jA">Algot (Weidmann 2022)</a>
         <a href="https://www.youtube.com/watch?v=DPsdy2u9nHk">Algot (Thorgeirsson 2024)</a>
         <a href="https://www.youtube.com/watch?v=tV883xHGXM0&list=PLL3zrb-nB_Ah6n262DcJadPtG76CjLh23&index=11">AlgoTouch (Frison 2015)</a>
     </td>
