update for Spring '25

--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     
 <h2 id="schedule">Schedule</h2>
 
-<p>For Winter 2025, PPIC meets on Fridays at 1pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 311 at UCSD</a> and on Zoom.</p>
+<p>For Spring 2025, PPIC meets on Tuesday at 2pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 361 at UCSD</a> and on Zoom.</p>
+
+<table>
+<thead>
+<tr>
+    <th>Date</th>
+    <th>Topic</th>
+    <th>Leader</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+    <td>April 15</td>
+    <td>GUIs for JSON DSLs
+        <a href="https://www.youtube.com/watch?v=jZFLuDkg4jA">Prong (McNutt 2023)</a>
+        <a href="https://www.youtube.com/watch?v=DPsdy2u9nHk">Ivy (McNutt 2021)</a>
+    </td>
+    <td>Brian</td>
+</tr>
+</tbody>
+</table>
+
+<p>For Winter 2025, PPIC met on Fridays at 1pm.</p>
 
 <table>
 <thead>
