--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 <tr>
     <td>Apr 15</td>
     <td>GUIs for JSON DSLs
-        <a href="https://www.youtube.com/watch?v=jZFLuDkg4jA">Prong (McNutt 2023)</a>
-        <a href="https://www.youtube.com/watch?v=DPsdy2u9nHk">Ivy (McNutt 2021)</a>
+        <a href="https://youtu.be/-62Slx5Tq6o">Prong (McNutt 2023)</a>
+        <a href="https://www.youtube.com/watch?v=FzIdVnSi9Po">Ivy (McNutt 2021)</a>
     </td>
     <td>Brian</td>
 </tr>
