--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Apr 22</td>
+    <td>Cognitive Dimensions of Notation
+        <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
+        <a href="https://www.youtube.com/watch?v=aelyKLi30qg">Tutorial Talk</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
     <td>Apr 15</td>
     <td>GUIs for JSON DSLs
         <a href="https://youtu.be/-62Slx5Tq6o">Prong (McNutt 2023)</a>
