--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
-    <td>Apr 22</td>
-    <td>Cognitive Dimensions of Notation
+    <td>Apr 29</td>
+    <td>Cognitive Dimensions of Notation, #3-13
         <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
-        <a href="https://www.youtube.com/watch?v=aelyKLi30qg">Tutorial Talk</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
+    <td>Apr 22</td>
+    <td>Cognitive Dimensions of Notation, #1-2
+        <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
     </td>
     <td>Brian</td>
 </tr>
