--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>May 8</td>
+    <td>Cognitive Dimensions of Notation, #5-13
+        <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
+    </td>
+    <td>Brian</td>
+</tr>    
+<tr>
     <td>Apr 29</td>
-    <td>Cognitive Dimensions of Notation, #3-13
+    <td>Cognitive Dimensions of Notation, #3-4
         <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
     </td>
     <td>Brian</td>
