--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
-    <td>May 13</td>
+    <td>May 20</td>
     <td>Cognitive Dimensions of Notation, #7-13
         <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
     </td>
@@ -50,7 +50,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>May 6</td>
     <td>Cognitive Dimensions of Notation, #5-6
         <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
-        <a href="images/expression_problem.png">The Expression Problem</a>
+        <a href="images/expression_problem.png" class="normal">The Expression Problem</a>
     </td>
     <td>Brian</td>
 </tr>    
