--- a/index.html
+++ b/index.html
@@ -40,13 +40,20 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>June 3</td>
+    <td>Cognitive Dimensions of Notation, #10-13
+        <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
+    </td>
+    <td>Brian</td>
+</tr>    
+<tr>
     <td>May 27</td>
     <td>VL/HCC Submission Recap</td>
     <td>Anyone who submitted to VL/HCC</td>
 </tr>    
 <tr>
     <td>May 20</td>
-    <td>Cognitive Dimensions of Notation, #7-13
+    <td>Cognitive Dimensions of Notation, #7-9
         <a href="https://www.sciencedirect.com/science/article/pii/S1045926X96900099">Paper (Green and Petre 1996)</a>
     </td>
     <td>Brian</td>
