--- a/index.html
+++ b/index.html
@@ -40,14 +40,21 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>July 8</td>
+    <td>Tentatively: Debugging Lit vs Fancy Programming Interfaces
+        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=4497212">Sillito et al 2008</a>
+    </td>
+    <td>Brian</td>
+</tr>    
+<tr>
     <td>July 1</td>
-    <td>TBD</td>
-    <td>Brian is out of town</td>
+    <td>(Canceled)</td>
+    <td></td>
 </tr>    
 <tr>
     <td>June 24</td>
-    <td>TBD</td>
-    <td>Brian is out of town</td>
+    <td>(Canceled)</td>
+    <td></td>
 </tr>    
 <tr>
     <td>June 17</td>
