--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     
 <h2 id="schedule">Schedule</h2>
 
-<p>For Spring 2025, PPIC meets on Tuesday at 2pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 361 at UCSD</a> and on Zoom.</p>
+<p>For late summer 2025, PPIC meets on Monday at 1pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 311 at UCSD</a> and on Zoom.</p>
 
 <table>
 <thead>
@@ -40,27 +40,27 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
-    <td>July 15</td>
-    <td>Tentatively: Debugging Lit vs Fancy Programming Interfaces
+    <td>July 28</td>
+    <td>Debugging Lit vs Fancy Programming Interfaces
         <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=4497212">Sillito et al 2008</a>
     </td>
     <td>Brian</td>
 </tr>    
+</tbody>
+</table>
+
+<p>For spring and early summer 2025, PPIC met on Tuesday at 2pm.</p>
+
+<table>
+<thead>
 <tr>
-    <td>July 8</td>
-    <td>(Canceled)</td>
-    <td></td>
-</tr>    
-<tr>
-    <td>July 1</td>
-    <td>(Canceled)</td>
-    <td></td>
-</tr>    
-<tr>
-    <td>June 24</td>
-    <td>(Canceled)</td>
-    <td></td>
-</tr>    
+    <th>Date</th>
+    <th>Topic</th>
+    <th>Leader</th>
+</tr>
+</thead>
+
+<tbody>
 <tr>
     <td>June 17</td>
     <td>Cognitive Dimensions of Notation, #12-13
@@ -120,7 +120,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </tbody>
 </table>
 
-<p>For Winter 2025, PPIC met on Fridays at 1pm.</p>
+<p>For winter 2025, PPIC met on Fridays at 1pm.</p>
 
 <table>
 <thead>
