--- a/index.html
+++ b/index.html
@@ -40,14 +40,20 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Aug 18</td>
+    <td>Debugging Lit vs Fancy Programming Interfaces, Part 3
+        <a href="https://doi.org/10.1145/1806799.1806829">Reacher Formative Study</a>
+        <a href="https://doi.org/10.1109/VLHCC.2011.6070388">Reacher</a>
+    </td>
+    <td>Brian</td>
+</tr>    
+<tr>
     <td>Aug 4</td>
     <td>Debugging Lit vs Fancy Programming Interfaces, Part 2
         <a href="https://ieeexplore.ieee.org/abstract/document/8813258">Kubelka et al 2019</a>
         <a href="https://doi.org/10.1109/HCC.2003.1260196">Whyline Formative Study</a>
         <a href="https://doi.org/10.1145/985692.985712">Whyline for Alice</a>
         <a href="https://doi.org/10.1145/1824760.1824761">Whyline for Java</a>
-        <a href="https://doi.org/10.1145/1806799.1806829">Reacher Formative Study</a>
-        <a href="https://doi.org/10.1109/VLHCC.2011.6070388">Reacher</a>
     </td>
     <td>Brian</td>
 </tr>    
