--- a/index.html
+++ b/index.html
@@ -40,13 +40,20 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Aug 25</td>
+    <td>Debugging Lit vs Fancy Programming Interfaces, Part 4
+        <a href="https://doi.org/10.1109/VLHCC.2011.6070388">Reacher</a>
+    </td>
+    <td>Brian</td>
+</tr>
+<tr>
     <td>Aug 18</td>
     <td>Debugging Lit vs Fancy Programming Interfaces, Part 3
         <a href="https://doi.org/10.1145/1806799.1806829">Reacher Formative Study</a>
         <a href="https://doi.org/10.1109/VLHCC.2011.6070388">Reacher</a>
     </td>
     <td>Brian</td>
-</tr>    
+</tr>
 <tr>
     <td>Aug 4</td>
     <td>Debugging Lit vs Fancy Programming Interfaces, Part 2
