--- a/index.html
+++ b/index.html
@@ -27,7 +27,40 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     
 <h2 id="schedule">Schedule</h2>
 
-<p>For late summer 2025, PPIC meets on Monday at 1pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 311 at UCSD</a> and on Zoom.</p>
+
+<p>For fall 2025, PPIC meets on Thursdays at 4pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 361 at UCSD</a> and on Zoom.</p>
+
+<table>
+<thead>
+<tr>
+    <th>Date</th>
+    <th>Topic</th>
+    <th>Leader</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+    <td>Nov 6</td>
+    <td>Sculpin: Direct-Manipulation Transformation of JSON
+        <a href="https://dl.acm.org/doi/full/10.1145/3746059.3747651">Paper (Josh & Dev UIST 2025)</a>
+        <a href="">where is the video</a>
+    </td>
+    <td>Dev & Josh</td>
+</tr>
+<tr>
+    <td>Oct 30</td>
+    <td>Debugger Canvas
+        <a href="https://dl.acm.org/doi/abs/10.5555/2337223.2337362">Paper (DeLine 2012)</a>
+        <a href="https://www.youtube.com/watch?v=3p9XUwIlhJg">Video</a>
+        <a href="https://vimeo.com/11064303">Kaleido Demo</a>
+    </td>
+    <td>Brian</td>
+</tr>
+</tbody>
+</table>
+
+<p>For late summer 2025, PPIC met on Monday at 1pm.</p>
 
 <table>
 <thead>
