--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>Nov 6</td>
     <td>Sculpin: Direct-Manipulation Transformation of JSON
         <a href="https://dl.acm.org/doi/full/10.1145/3746059.3747651">Paper (Josh & Dev UIST 2025)</a>
-        <a href="">where is the video</a>
+        <a href="https://www.youtube.com/watch?v=pzyrcKuR6iY">Video</a>
     </td>
     <td>Dev & Josh</td>
 </tr>
