--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>Debugger Canvas
         <a href="https://dl.acm.org/doi/abs/10.5555/2337223.2337362">Paper (DeLine 2012)</a>
         <a href="https://www.youtube.com/watch?v=3p9XUwIlhJg">Video</a>
+        <a href="https://www.ericrawn.media/assets/blog/publications/quickpose/Quickpose_CHI23_Rawn.pdf">Quickpose</a>
         <a href="https://vimeo.com/11064303">Kaleido Demo</a>
     </td>
     <td>Brian</td>
