--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Dec 11</td>
+    <td>WIP Update</td>
+    <td>Josh & Dev</td>
+</tr>
+<tr>
+    <td>Dec 4</td>
+    <td>Tentative: How Pro Devs Use AI Agents for Coding</td>
+    <td>Brian</td>
+</tr>
+<tr>
+    <td>Nov 20</td>
+    <td>WIP Update: Spreadsheets and/or Programming by Sculpting for Spreadsheets</td>
+    <td>Jacob</td>
+</tr>
+<tr>
+    <td>Nov 13</td>
+    <td>SQUIRE: Interactive UI Authoring via Slot QUery Intermediate REpresentations
+        <a href="https://dl.acm.org/doi/full/10.1145/3746059.3747672">Paper (Leung 2025)</a>
+        <a href="https://www.youtube.com/watch?v=0QzoGPvf3zk">30s Preview</a>
+    </td>
+    <td>Saketh</td>
+</tr>
+<tr>
     <td>Nov 6</td>
     <td>Sculpin: Direct-Manipulation Transformation of JSON
         <a href="https://dl.acm.org/doi/full/10.1145/3746059.3747651">Paper (Josh & Dev UIST 2025)</a>
