--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
+    <td>Dec 18</td>
+    <td>MVU with Elm, Tutorial Workshop (maybe build an audio timeline?)</td>
+    <td>Brian</td>
+</tr>
+<tr>
     <td>Dec 11</td>
     <td>WIP Update</td>
     <td>Josh & Dev</td>
@@ -60,6 +65,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>SQUIRE: Interactive UI Authoring via Slot QUery Intermediate REpresentations
         <a href="https://dl.acm.org/doi/full/10.1145/3746059.3747672">Paper (Leung 2025)</a>
         <a href="https://www.youtube.com/watch?v=0QzoGPvf3zk">30s Preview</a>
+        vs <a href="https://www.youtube.com/watch?v=pzyrcKuR6iY">Sculpin</a>
     </td>
     <td>Saketh</td>
 </tr>
