--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </tr>
 <tr>
     <td>Dec 4</td>
-    <td>Tentative: How Pro Devs Use AI Agents for Coding</td>
+    <td>DynaVis and BISCUIT <a href="https://dl.acm.org/doi/suppl/10.1145/3613904.3642639/suppl_file/3613904.3642639-talk-video.mp4">DynaVis (Vaithilingam 2024)</a> <a href="https://static.barik.net/barik/publications/vlhcc2024/cheng_biscuit_vlhcc24.pdf">BISCUIT (Cheng 2024)</a></td>
     <td>Brian</td>
 </tr>
 <tr>
