--- a/index.html
+++ b/index.html
@@ -28,7 +28,27 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 <h2 id="schedule">Schedule</h2>
 
 
-<p>For fall 2025, PPIC meets on Thursdays at 4pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 361 at UCSD</a> and on Zoom.</p>
+<p>For spring 2026, PPIC meets on Tuesdays at 3:30pm in <a href="https://map.concept3d.com/?id=1005#!m/636237">DIB 361 at UCSD</a> and on Zoom.</p>
+
+<table>
+<thead>
+<tr>
+    <th>Date</th>
+    <th>Topic</th>
+    <th>Leader</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+    <td>Dec 18</td>
+    <td>PPIC Scheduling and whatever Brian last read</td>
+    <td>Brian</td>
+</tr>
+</tbody>
+</table>
+
+<p>For fall 2025, PPIC met on Thursdays at 4pm.</p>
 
 <table>
 <thead>
