--- a/index.html
+++ b/index.html
@@ -41,7 +41,73 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tbody>
 <tr>
-    <td>Dec 18</td>
+    <td>Apr 7</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Mar 31</td>
+    <td>No PPIC. UIST Deadline.</td>
+    <td></td>
+</tr>
+
+<tr>
+    <td>Mar 24</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Mar 17</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Mar 10</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Mar 3</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Feb 24</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Feb 17</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Feb 10</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Feb 3</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Feb 3</td>
+    <td>?</td>
+    <td>?</td>
+</tr>
+
+<tr>
+    <td>Jan 27</td>
     <td>PPIC Scheduling and whatever Brian last read</td>
     <td>Brian</td>
 </tr>
