--- a/index.html
+++ b/index.html
@@ -101,14 +101,12 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </tr>
 
 <tr>
-    <td>Feb 3</td>
-    <td>?</td>
-    <td>?</td>
-</tr>
-
-<tr>
     <td>Jan 27</td>
-    <td>PPIC Scheduling and whatever Brian last read</td>
+    <td>PPIC Scheduling and whatever Brian wants to read.
+        Interaction Substrates: Combining Power and Simplicity in Interactive Systems
+        <a href="https://dl.acm.org/doi/10.1145/3706598.3714006">Paper (Mackay and Beaudouin-Lafon 2025)</a>
+        <a href="https://www.youtube.com/watch?v=8TCrjoMsGKs">Video</a>
+    </td>
     <td>Brian</td>
 </tr>
 </tbody>
