--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         td a:not(.normal):hover {
             background: black;
         }
+        td:nth-child(2) {
+            padding: 0 1em;
+        }
     </style>
 </head>
 <h1>🌊 Pacific Programming Interfaces Confab (PPIC) 🌊</h1>
@@ -348,12 +351,18 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 </tr>
 <tr>
     <td>Feb 14</td>
-    <td>Loops💘Tables II</td>
+    <td>
+        Loops💘Tables II
+        <a href="https://docs.google.com/spreadsheets/d/1WGhqUeU8IdE9C0c9JRthZmkauEicnWJQM5ypNwXMYog/edit?usp=sharing" class="normal">Our Experiments</a>
+    </td>
     <td>Brian</td>
 </tr>
 <tr>
     <td>Jan 31</td>
-    <td>Loops💘Tables I</td>
+    <td>
+        Loops💘Tables I
+        <a href="https://docs.google.com/spreadsheets/d/1WGhqUeU8IdE9C0c9JRthZmkauEicnWJQM5ypNwXMYog/edit?usp=sharing" class="normal">Our Experiments</a>
+    </td>
     <td>Brian</td>
 </tr>
 <tr>
