--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Feb 24</td>
-    <td>?</td>
-    <td>?</td>
+    <td>Belidor</td>
+    <td>Matt</td>
 </tr>
 
 <tr>
@@ -93,14 +93,14 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Feb 10</td>
-    <td>?</td>
-    <td>?</td>
+    <td>DynaVis and BISCUIT <a href="https://dl.acm.org/doi/suppl/10.1145/3613904.3642639/suppl_file/3613904.3642639-talk-video.mp4">DynaVis (Vaithilingam 2024)</a> <a href="https://static.barik.net/barik/publications/vlhcc2024/cheng_biscuit_vlhcc24.pdf">BISCUIT (Cheng 2024)</a></td>
+    <td>Brian</td>
 </tr>
 
 <tr>
     <td>Feb 3</td>
     <td>?</td>
-    <td>?</td>
+    <td>Dev</td>
 </tr>
 
 <tr>
@@ -137,11 +137,6 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>WIP Update</td>
     <td>Josh & Dev</td>
 </tr>
-<!-- <tr>
-    <td>Dec 4</td>
-    <td>DynaVis and BISCUIT <a href="https://dl.acm.org/doi/suppl/10.1145/3613904.3642639/suppl_file/3613904.3642639-talk-video.mp4">DynaVis (Vaithilingam 2024)</a> <a href="https://static.barik.net/barik/publications/vlhcc2024/cheng_biscuit_vlhcc24.pdf">BISCUIT (Cheng 2024)</a></td>
-    <td>Brian</td>
-</tr> -->
 <tr>
     <td>Nov 20</td>
     <td>WIP Update: Spreadsheets and/or Programming by Sculpting for Spreadsheets</td>
