--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Jan 27</td>
-    <td>PPIC Scheduling and whatever Brian wants to read.
-        Interaction Substrates: Combining Power and Simplicity in Interactive Systems
+    <td>Interaction Substrates: Combining Power and Simplicity in Interactive Systems
         <a href="https://dl.acm.org/doi/10.1145/3706598.3714006">Paper (Mackay and Beaudouin-Lafon 2025)</a>
         <a href="https://www.youtube.com/watch?v=8TCrjoMsGKs">Video</a>
     </td>
