--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 <tr>
     <td>Feb 17</td>
     <td>?</td>
-    <td>?</td>
+    <td>Zhicheng</td>
 </tr>
 
 <tr>
@@ -108,6 +108,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
     <td>Interaction Substrates: Combining Power and Simplicity in Interactive Systems
         <a href="https://dl.acm.org/doi/10.1145/3706598.3714006">Paper (Mackay and Beaudouin-Lafon 2025)</a>
         <a href="https://www.youtube.com/watch?v=8TCrjoMsGKs">Video</a>
+        <a href="https://docs.google.com/document/d/1HD75gr9QnCLh7erDQ9OUUm0DJgtCDFy8DIs6WvJ0N4Y/edit?usp=sharing" class="normal">Our musings on substrate definitions and basal media</a>
     </td>
     <td>Brian</td>
 </tr>
