--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <p>PPIC is an informal meetup to muse on programming interfaces and on, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
 The format varies week to week: one week we might discuss a paper or talk, the next someone might present work in progress for feedback, and the next we might argue about some spicy question like, "Do end-users even want to automate their tasks?".
+Generally, neither presenters or attendess do much preparation: if there's a new idea, we figure it out together and discussion naturally blossoms.
 Visitors welcome, even if you're not in the Pacific time zone!</p>
     
 <p>To get announcements and the Zoom link, join the <a href="https://groups.google.com/a/ucsd.edu/g/programming-interfaces-g">Google group</a>.</p>
@@ -99,7 +100,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Feb 3</td>
-    <td>?</td>
+    <td>Notations, etc.</td>
     <td>Dev</td>
 </tr>
 
