--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 <h1>🌊 Pacific Programming Interfaces Confab (PPIC) 🌊</h1>
 
+<p>Click here to accept a cookie: <a onclick="this.parentElement.remove()" style="cursor: pointer;">🍪</a></p>
+
 <p>PPIC is an informal meetup to muse on programming interfaces and on, roughly, how to fill the gap between spreadsheets and general-purpose textual programming.
 The format varies week to week: one week we might discuss a paper or talk, the next someone might present work in progress for feedback, and the next we might argue about some spicy question like, "Do end-users even want to automate their tasks?".
 Generally, neither presenters or attendess do much preparation: if there's a new idea, we figure it out together and discussion naturally blossoms.
