--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Feb 17</td>
-    <td>Webstrates and MyWebstrates <a href="https://www.youtube.com/watch?v=qgT94IkCmbo">Webstrates (Klokmose 2015)</a> <a href="https://www.youtube.com/watch?v=1KueEJQZ3tU">MyWebstrates (Klokmose 2024)</a></td>
+    <td>Webstrates and MyWebstrates and Infusion <a href="https://www.youtube.com/watch?v=qgT94IkCmbo">Webstrates (Klokmose 2015)</a> <a href="https://www.youtube.com/watch?v=1KueEJQZ3tU">MyWebstrates (Klokmose 2024)</a> <a href="https://www.youtube.com/watch?v=ai2fbWi3kUU">Infusion (Basman 2025)</a></td>
     <td>Zhicheng</td>
 </tr>
 
