--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Mar 3</td>
-    <td>?</td>
-    <td>?</td>
+    <td>"I Wrote This But I Didn't" AI Code Understanding WIP</td>
+    <td>Bimal</td>
 </tr>
 
 <tr>
