--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ Visitors welcome, even if you're not in the Pacific time zone!</p>
 
 <tr>
     <td>Mar 17</td>
-    <td>?</td>
-    <td>?</td>
+    <td>UIST Prototype</td>
+    <td>Zhicheng</td>
 </tr>
 
 <tr>
